// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact component Should render the Contact component 1`] = `
<DocumentFragment>
  <form
    class="c-contact"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <h2>
        Send me your message
      </h2>
      <div
        class="c-contact__field"
      >
        <label
          for="email"
        >
          Email:
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
          value=""
        />
      </div>
      <div
        class="c-contact__field"
      >
        <label
          for="message"
        >
          Message:
        </label>
        <textarea
          cols="30"
          id="message"
          name="message"
          required=""
          rows="10"
        />
      </div>
      <input
        name="field"
        type="hidden"
      />
      <div
        class="c-contact__actions"
      >
        <button
          class="c-btn"
          type="submit"
        >
          Send message
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Contact component Should render the Contact component 2`] = `
<DocumentFragment>
  <form
    class="c-contact"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <h2>
        Send me your message
      </h2>
      <div
        class="c-contact__field"
      >
        <label
          for="email"
        >
          Email:
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
          value=""
        />
      </div>
      <div
        class="c-contact__field"
      >
        <label
          for="message"
        >
          Message:
        </label>
        <textarea
          cols="30"
          id="message"
          name="message"
          required=""
          rows="10"
        />
      </div>
      <input
        name="field"
        type="hidden"
      />
      <div
        class="c-contact__actions"
      >
        <button
          class="c-btn"
          type="submit"
        >
          Send message
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Contact component Should unmount the Contact component 1`] = `<DocumentFragment />`;

exports[`Tests Contact submission 1`] = `
<DocumentFragment>
  <form
    class="c-contact"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <h2>
        Send me your message
      </h2>
      <div
        class="c-contact__field"
      >
        <label
          for="email"
        >
          Email:
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
          value=""
        />
      </div>
      <div
        class="c-contact__field"
      >
        <label
          for="message"
        >
          Message:
        </label>
        <textarea
          cols="30"
          id="message"
          name="message"
          required=""
          rows="10"
        />
      </div>
      <input
        name="field"
        type="hidden"
      />
      <div
        class="c-contact__actions"
      >
        <button
          class="c-btn"
          type="submit"
        >
          Send message
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Tests Contact submission 2`] = `
<DocumentFragment>
  <form
    class="c-contact"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <h2>
        Send me your message
      </h2>
      <div
        class="c-contact__field"
      >
        <label
          for="email"
        >
          Email:
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
          value=""
        />
      </div>
      <div
        class="c-contact__field"
      >
        <label
          for="message"
        >
          Message:
        </label>
        <textarea
          cols="30"
          id="message"
          name="message"
          required=""
          rows="10"
        />
      </div>
      <input
        name="field"
        type="hidden"
      />
      <div
        class="c-contact__actions"
      >
        <button
          class="c-btn"
          type="submit"
        >
          Send message
        </button>
        <p
          class="c-contact__error"
        >
          Something went wrong. Please try again.
        </p>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Tests Contact submission 3`] = `
<DocumentFragment>
  <form
    class="c-contact"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <div
        class="c-contact__actions"
      >
        <p
          class="c-contact__success"
        >
          Thank you for your message! I will get in touch with you soon.
        </p>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Unknown component Should render the Unknown component 1`] = `
<DocumentFragment>
  <form
    class="c-contact c-contact--visible"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <h2>
        Send me your message
      </h2>
      <div
        class="c-contact__field"
      >
        <label
          for="email"
        >
          Email:
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
          value=""
        />
      </div>
      <div
        class="c-contact__field"
      >
        <label
          for="message"
        >
          Message:
        </label>
        <textarea
          cols="30"
          id="message"
          name="message"
          required=""
          rows="10"
        />
      </div>
      <input
        name="field"
        type="hidden"
      />
      <div
        class="c-contact__actions"
      >
        <button
          class="c-btn"
          type="submit"
        >
          Send message
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Unknown component Should render the Unknown component 2`] = `
<DocumentFragment>
  <form
    class="c-contact"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <h2>
        Send me your message
      </h2>
      <div
        class="c-contact__field"
      >
        <label
          for="email"
        >
          Email:
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
          value=""
        />
      </div>
      <div
        class="c-contact__field"
      >
        <label
          for="message"
        >
          Message:
        </label>
        <textarea
          cols="30"
          id="message"
          name="message"
          required=""
          rows="10"
        />
      </div>
      <input
        name="field"
        type="hidden"
      />
      <div
        class="c-contact__actions"
      >
        <button
          class="c-btn"
          type="submit"
        >
          Send message
        </button>
        <p
          class="c-contact__error"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Unknown component Should render the Unknown component 3`] = `
<DocumentFragment>
  <form
    class="c-contact"
  >
    <button
      class="c-contact__close"
      type="button"
    >
      Close
    </button>
    <div
      class="c-contact__body"
    >
      <div
        class="c-contact__actions"
      >
        <p
          class="c-contact__success"
        >
          Thank you for your message! I will get in touch with you soon.
        </p>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Unknown component Should unmount the Unknown component 1`] = `<DocumentFragment />`;

exports[`Unknown component Should unmount the Unknown component 2`] = `<DocumentFragment />`;

exports[`Unknown component Should unmount the Unknown component 3`] = `<DocumentFragment />`;
